--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -21,7 +21,7 @@
 
 .copyright {
   font-size: 13px;
-  color: rgba(245, 242, 240, 0.4);
+  color: rgba(245, 242, 240, 0.55);
 }
 
 .links {
@@ -32,7 +32,7 @@
   button {
     background: transparent;
     font-size: 13px;
-    color: rgba(245, 242, 240, 0.4);
+    color: rgba(245, 242, 240, 0.55);
     transition: color 0.15s ease;
 
     &:hover {
