--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -53,7 +53,7 @@
 
 .langLink {
   font-size: 13px;
-  color: rgba(245, 242, 240, 0.4);
+  color: rgba(245, 242, 240, 0.55);
   transition: color 0.15s ease;
 
   &:hover {
